--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project2",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.7.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -19,7 +22,10 @@
   },
   "homepage": "https://github.com/kmac783/project2#readme",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "express-ejs-layouts": "^2.5.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.11"
   }
 }
