--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project2",
   "version": "1.0.0",
   "engines": {
-    "node": "14.7.0"
+    "node": "14.11.0"
   },
   "description": "",
   "main": "server.js",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/kmac783/project2#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
